--- a/zlearn/pom.xml
+++ b/zlearn/pom.xml
@@ -60,7 +60,7 @@
 		<dependency>
 		    <groupId>org.hibernate</groupId>
 		    <artifactId>hibernate-entitymanager</artifactId>
-		    <version>5.3.3.Final</version>
+		    <version>5.3.3.Final</version><!--$NO-MVN-MAN-VER$-->
 		</dependency>
 		
 		<dependency>
