--- a/zlearn/src/main/resources/application.properties
+++ b/zlearn/src/main/resources/application.properties
@@ -1,4 +1,15 @@
-spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://localhost:3306/test
+#View Configuration
+
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
+
+
+
+#Database configuration
+
+spring.jpa.hibernate.ddl-auto = update
+
+spring.datasource.url=jdbc:mysql://localhost:3306/zlearndb?autoReconnect=true&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=admin123
+spring.datasource.password=toor
+#spring.jpa.properties.hibernate.dialect="org.hibernate.dialect.MySQL5Dialect"
