--- a/zlearn/src/main/resources/application.properties
+++ b/zlearn/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
-spring.mvc.view.prefix=/WEB-INF/jsp/
-spring.mvc.view.suffix=.jsp
-
+spring.mvc.view.prefix= /WEB-INF/views/
+spring.mvc.view.suffix= .jsp
+debug:true
 
 
 #Database configuration
