--- a/zlearn/src/main/resources/application.properties
+++ b/zlearn/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 
-spring.mvc.view.prefix= /WEB-INF/views/
+spring.mvc.view.prefix= /WEB-INF/jsp/
 spring.mvc.view.suffix= .jsp
-debug:true
+logging.level.org.springframework=TRACE
+logging.level.com=TRACE
 
 
 #Database configuration
